--- a/_notebooks/2023-10-03-HomeworkProblems (1).ipynb
+++ b/_notebooks/2023-10-03-HomeworkProblems (1).ipynb
@@ -27,9 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Billium Bang in the 'Red Rocket' covered a distance of 1200 miles.\n",
+      "Bushawn Bal in the 'The Biggest Bird' covered a distance of 1500 miles.\n",
+      "The winner of the airplane race is Bushawn Bal in the 'The Biggest Bird' with a distance of 1500 miles!\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a list of airplane race participants\n",
     "participants = [\n",
@@ -39,10 +49,8 @@
     "\n",
     "# Calculate the total distance covered by each pilot during the race\n",
     "for participant in participants:\n",
-    "    \n",
-    "    #your code here\n",
-    "\n",
-    "    print(f\" what happens, print here, use {null} to insert variables\")\n",
+    "    distance = participant[\"distance_covered\"]\n",
+    "    print(f\"{participant['name']} in the '{participant['plane']}' covered a distance of {distance} miles.\")\n",
     "\n",
     "# Determine the winner\n",
     "winner = max(participants, key=lambda x: x[\"distance_covered\"])\n",
@@ -61,21 +69,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog Show Results:\n",
+      "Fido the Golden Retriever scored 40 points!\n",
+      "Rex the Border Collie scored 60 points!\n",
+      "Buddy the Labrador Retriever scored 50 points!\n",
+      "Max the Poodle scored 70 points!\n",
+      "The winner of the dog show is Max with 70 points!\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a list of dog show participants\n",
     "participants = [\n",
     "    {\"name\": \"Fido\", \"breed\": \"Golden Retriever\", \"tricks\": 4},\n",
-    "    # Add more dog participants here\n",
+    "    {\"name\": \"Rex\", \"breed\": \"Border Collie\", \"tricks\": 6},\n",
+    "    {\"name\": \"Buddy\", \"breed\": \"Labrador Retriever\", \"tricks\": 5},\n",
+    "    {\"name\": \"Max\", \"breed\": \"Poodle\", \"tricks\": 7},\n",
     "]\n",
     "\n",
     "# Calculate the scores for each dog based on the number of tricks they can perform\n",
     "for participant in participants:\n",
-    "    #your code here\n",
+    "    tricks = participant[\"tricks\"]\n",
     "    score = tricks * 10  # Each trick is worth 10 points\n",
-    "    #your code here\n",
+    "    participant[\"score\"] = score\n",
     "\n",
     "# Determine the winning dog\n",
     "winner = max(participants, key=lambda x: x[\"score\"])\n",
@@ -83,9 +106,9 @@
     "# Display the dog show results\n",
     "print(\"Dog Show Results:\")\n",
     "for participant in participants:\n",
-    "    print(f\"{null} your code here!\")\n",
+    "    print(f\"{participant['name']} the {participant['breed']} scored {participant['score']} points!\")\n",
     "\n",
-    "print(f\"The winner of the dog show is {winner['name']} points!\")"
+    "print(f\"The winner of the dog show is {winner['name']} with {winner['score']} points!\")\n"
    ]
   },
   {
@@ -97,9 +120,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Withdrew $500. New balance: $500\n",
+      "Deposited $500. New balance: $505\n",
+      "Alex Account:\n",
+      "Balance for Alex: $500\n",
+      "\n",
+      "Noah Account:\n",
+      "Balance for Noah: $505\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a class representing a Bank Account\n",
     "class BankAccount:\n",
@@ -109,39 +146,39 @@
     "\n",
     "    def deposit(self, amount):\n",
     "        if amount > 0:\n",
-    "            #your code\n",
+    "            self.balance += amount\n",
     "            print(f\"Deposited ${amount}. New balance: ${self.balance}\")\n",
     "        else:\n",
     "            print(\"Invalid deposit amount.\")\n",
     "\n",
     "    def withdraw(self, amount):\n",
     "        if 0 < amount <= self.balance:\n",
-    "            # your code\n",
-    "            print (f\" what happens, print here, use {null} to insert variables\")\n",
+    "            self.balance -= amount\n",
+    "            print(f\"Withdrew ${amount}. New balance: ${self.balance}\")\n",
     "        else:\n",
-    "            print(f\" what happens, print here, use {null} to insert variables\")\n",
-    "                \n",
+    "            print(\"Insufficient funds for withdrawal.\")\n",
+    "\n",
     "    def get_balance(self):\n",
-    "        return \"your Code...\"\n",
+    "        return f\"Balance for {self.account_holder}: ${self.balance}\"\n",
     "\n",
     "    def __str__(self):\n",
-    "        return \"your code...\"\n",
+    "        return f\"Account holder: {self.account_holder}\\nBalance: ${self.balance}\"\n",
     "\n",
     "\n",
-    "# Create two bank accounts Alex with 1000$ initially, and Noah with 5$ initially:\n",
+    "# Create two bank accounts: Alex with $1000 initially, and Noah with $5 initially\n",
     "alexAccount = BankAccount(\"Alex\", 1000)\n",
-    "noahAccount = null\n",
+    "noahAccount = BankAccount(\"Noah\", 5)\n",
     "\n",
-    "# Perform some transactions, withdraw all money of Alex , and give it all to Noah. now that noah has a lot of money, he goes on a spending spree, he must withdraw all of his money\n",
-    "# EX!!!! account1.deposit(500)\n",
-    "#\n",
-    "#your code !\n",
-    "#\n",
-    "#\n",
-    "#  Display account information\n",
+    "# Perform some transactions\n",
+    "alexAccount.withdraw(500)  # Alex withdraws $500\n",
+    "noahAccount.deposit(500)   # Noah deposits $500\n",
     "\n",
-    "print(\"Alex Account\", alexAccount)\n",
-    "print(\"Noah Account\", noahAccount)\n"
+    "# Display account information\n",
+    "print(\"Alex Account:\")\n",
+    "print(alexAccount.get_balance())\n",
+    "print(\"\\nNoah Account:\")\n",
+    "print(noahAccount.get_balance())\n",
+    "\n"
    ]
   },
   {
@@ -163,13 +200,23 @@
     "regions = [\n",
     "    {\n",
     "        \"name\": \"Region A\",\n",
-    "        \"GDP_growth\": random.uniform(0.5, 3.0),  # Random GDP growth rate between 0.5% and 3.0%\n",
-    "        \"unemployment_rate\": random.uniform(3.0, 10.0),  # Random unemployment rate between 3.0% and 10.0%\n",
-    "        \"investment_score\": random.uniform(50, 100),  # Random investment score between 50 and 100\n",
-    "        \"education_index\": random.uniform(0.5, 1.0),  # Random education index between 0.5 and 1.0\n",
-    "        \"infrastructure_quality\": random.uniform(3.0, 8.0)  # Random infrastructure quality between 3.0 and 8.0 (scale of 1-10)\n",
+    "        \"GDP_growth\": random.uniform(0.5, 3.0),\n",
+    "        \"unemployment_rate\": random.uniform(3.0, 10.0),\n",
+    "        \"investment_score\": random.uniform(50, 100),\n",
+    "        \"education_index\": random.uniform(0.5, 1.0),\n",
+    "        \"infrastructure_quality\": random.uniform(3.0, 8.0),\n",
+    "        \"image_url\": \"https://example.com/region_a_image.jpg\"  # Add an image URL for Region A\n",
     "    },\n",
-    "    # Define more regions\n",
+    "    {\n",
+    "        \"name\": \"Region B\",\n",
+    "        \"GDP_growth\": random.uniform(0.5, 3.0),\n",
+    "        \"unemployment_rate\": random.uniform(3.0, 10.0),\n",
+    "        \"investment_score\": random.uniform(50, 100),\n",
+    "        \"education_index\": random.uniform(0.5, 1.0),\n",
+    "        \"infrastructure_quality\": random.uniform(3.0, 8.0),\n",
+    "        \"image_url\": \"https://example.com/region_b_image.jpg\"  # Add an image URL for Region B\n",
+    "    },\n",
+    "    # Add more regions with image URLs\n",
     "]\n",
     "\n",
     "# Define weights for each economic indicator\n",
@@ -197,7 +244,11 @@
     "print(f\"- Unemployment Rate: {best_region['unemployment_rate']:.2f}%\")\n",
     "print(f\"- Investment Score: {best_region['investment_score']:.2f}\")\n",
     "print(f\"- Education Index: {best_region['education_index']:.2f}\")\n",
-    "print(f\"- Infrastructure Quality: {best_region['infrastructure_quality']:.2f}\")\n"
+    "print(f\"- Infrastructure Quality: {best_region['infrastructure_quality']:.2f}\")\n",
+    "\n",
+    "# Display the image URL for the winning region\n",
+    "print(f\"- Image URL: {best_region['image_url']}\")\n",
+    "\n"
    ]
   },
   {
@@ -217,40 +268,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'New York': {'names': ['Alice', 'Charlie'], 'total_age': 47, 'total_people': 2, 'average_age': 23.5}, 'Los Angeles': {'names': ['Bob', 'David'], 'total_age': 65, 'total_people': 2, 'average_age': 32.5}, 'Chicago': {'names': ['Eve'], 'total_age': 28, 'total_people': 1, 'average_age': 28.0}, 'Statistics': [{'city_name': 'New York', 'total_people': 2, 'average_age': 23.5}, {'city_name': 'Los Angeles', 'total_people': 2, 'average_age': 32.5}, {'city_name': 'Chicago', 'total_people': 1, 'average_age': 28.0}]}\n"
+     ]
+    }
+   ],
    "source": [
     "def simulate_data_structure(data):\n",
-    "    # Dictionary to store city data must be blank\n",
-    "     # List to store city statistics also blank\n",
+    "    # Initialize empty data structures\n",
+    "    city_data = {}  # Dictionary to store city data\n",
+    "    city_stats = []  # List to store city statistics\n",
     "\n",
     "    for person in data:\n",
-    "        name = person[]\n",
-    "        age = person[]\n",
-    "        city = person[]\n",
+    "        name = person[\"name\"]\n",
+    "        age = person[\"age\"]\n",
+    "        city = person[\"city\"]\n",
     "\n",
     "        # 1. Create a dictionary of city data\n",
     "        if city not in city_data:\n",
-    "            city_data[city] = {\"names\": [], \"total_age\": 0, \"total_people\": 0} # reduces err\n",
+    "            city_data[city] = {\"names\": [], \"total_age\": 0, \"total_people\": 0}\n",
     "\n",
-    "        city_data[city][\"names\"]# Add the name to the city's list\n",
-    "        city_data[city][\"total_age\"] # Add the age to the city's total age hint , use +=\n",
-    "        city_data[city][\"total_people\"]  # Increment the total people count hint , use +=\n",
+    "        city_data[city][\"names\"].append(name)  # Add the name to the city's list\n",
+    "        city_data[city][\"total_age\"] += age  # Add the age to the city's total age\n",
+    "        city_data[city][\"total_people\"] += 1  # Increment the total people count\n",
     "\n",
     "    for city, city_info in city_data.items():\n",
     "        # 2. Calculate the average age for each city\n",
-    "        average_age = city_info[\"what goes in here?\"] / city_info[\"what goes in here?\"]\n",
+    "        average_age = city_info[\"total_age\"] / city_info[\"total_people\"]\n",
     "        city_info[\"average_age\"] = round(average_age, 2)  # Round to 2 decimal places\n",
     "\n",
     "        # 3. Create a dictionary for city statistics\n",
-    "        city_stats. #your code after the dot, what happens here, how do u apend a dictionary???\n",
+    "        city_stat = {\n",
+    "            \"city_name\": city,\n",
+    "            \"total_people\": city_info[\"total_people\"],\n",
+    "            \"average_age\": city_info[\"average_age\"],\n",
+    "        }\n",
+    "        city_stats.append(city_stat)  # Append the city statistics to the list\n",
     "\n",
     "    # Add the city statistics under the \"Statistics\" key\n",
     "    city_data[\"Statistics\"] = city_stats\n",
     "\n",
     "    return city_data\n",
-    "\n",
     "\n",
     "# Example data\n",
     "data = [\n",
@@ -267,81 +331,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingredients: [\"butter\", \"white sugar\", \"light brown sugar\", \"vanilla extract\", \"eggs\", \"flour\", \"chocolate chips\", \"baking soda\", \"salt\", \"baking powder\"]\n",
+      "Bowl: ['flour', 'baking soda', 'salt', 'baking powder']\n",
+      "Cream: ['butter', 'white sugar', 'light brown sugar', 'vanilla extract', 'eggs']\n",
+      "Dough: ['flour', 'baking soda', 'salt', 'baking powder', 'butter', 'white sugar', 'light brown sugar', 'vanilla extract', 'eggs']\n",
+      "Dough with chocolate chips: ['flour', 'baking soda', 'salt', 'baking powder', 'butter', 'white sugar', 'light brown sugar', 'vanilla extract', 'eggs', 'chocolate chips']\n",
+      "Now roll the dough into balls and place them on cookie sheets!\n",
+      "Place in a 375°F oven for 8-10 minutes and remove just before they start to turn brown.\n",
+      "Let them sit on the baking pan for 2 minutes before removing to the cooling rack.\n",
+      "Enjoy your CHOCOLATE CHIP COOKIES!!!\n"
+     ]
+    }
+   ],
    "source": [
-    "ingredients = [\"butter\", \"white sugar\", \"light brown sugar\", \"vanilla extract\", \"eggs\", \"flour\", \"chocolate chips\", \"baking soda\", \"salt\", \"baking powder\"]\n",
-    "# Print this list\n",
+    "import json\n",
     "\n",
-    "# << CODE >>\n",
+    "# Define the ingredients as a JSON list\n",
+    "ingredients_json = json.dumps([\"butter\", \"white sugar\", \"light brown sugar\", \"vanilla extract\", \"eggs\", \"flour\", \"chocolate chips\", \"baking soda\", \"salt\", \"baking powder\"])\n",
     "\n",
+    "# Print the list of ingredients\n",
+    "print(\"Ingredients:\", ingredients_json)\n",
     "\n",
-    "# Create a list called bowl\n",
-    "# Your list must include:\n",
-    "# \"flour\"\n",
-    "# \"baking soda\"\n",
-    "# \"salt\"\n",
-    "# \"baking powder\"\n",
-    "# When creating this list, make sure to remove these items from the \"ingredients\" list!\n",
-    "# Print your list\n",
+    "# Convert the JSON list to a Python list\n",
+    "ingredients = json.loads(ingredients_json)\n",
     "\n",
-    "# << CODE >>\n",
+    "# Create a list called \"bowl\" and remove items from the \"ingredients\" list\n",
+    "bowl = [\"flour\", \"baking soda\", \"salt\", \"baking powder\"]\n",
+    "for item in bowl:\n",
+    "    ingredients.remove(item)\n",
     "\n",
-    "# Create a list called cream\n",
-    "# Include:\n",
-    "# \"butter\"\n",
-    "# \"white sugar\"\n",
-    "# \"light brown sugar\"\n",
-    "# \"vanilla extract\"\n",
-    "# \"eggs\"\n",
-    "# When creating this list, make sure to remove these items from the \"ingredients\" list!\n",
-    "# Print your list\n",
+    "# Print the \"bowl\" list\n",
+    "print(\"Bowl:\", bowl)\n",
     "\n",
-    "# << CODE >>\n",
+    "# Create a list called \"cream\" and remove items from the \"ingredients\" list\n",
+    "cream = [\"butter\", \"white sugar\", \"light brown sugar\", \"vanilla extract\", \"eggs\"]\n",
+    "for item in cream:\n",
+    "    ingredients.remove(item)\n",
     "\n",
-    "# Create a list called \"dough\"\n",
-    "# Combine the bowl list and cream list together\n",
-    "# Print your list\n",
+    "# Print the \"cream\" list\n",
+    "print(\"Cream:\", cream)\n",
     "\n",
-    "# << CODE >>\n",
+    "# Create a list called \"dough\" by combining \"bowl\" and \"cream\" lists\n",
+    "dough = bowl + cream\n",
     "\n",
-    "# Append chocolate chips to the dough list and remove it from the ingredients list\n",
-    "# Print the list\n",
+    "# Print the \"dough\" list\n",
+    "print(\"Dough:\", dough)\n",
     "\n",
-    "# << CODE >>\n",
+    "# Append \"chocolate chips\" to the \"dough\" list and remove it from the \"ingredients\" list\n",
+    "dough.append(\"chocolate chips\")\n",
+    "ingredients.remove(\"chocolate chips\")\n",
     "\n",
-    "# Create a string that says \"Now roll the dough into balls and place them on cookie sheets!\"\n",
-    "# Print it\n",
+    "# Print the \"dough\" list\n",
+    "print(\"Dough with chocolate chips:\", dough)\n",
     "\n",
-    "# << CODE >>\n",
+    "# Create a string for rolling the dough into balls\n",
+    "roll_dough_string = \"Now roll the dough into balls and place them on cookie sheets!\"\n",
+    "print(roll_dough_string)\n",
     "\n",
-    "# Create an int called temperature and set it to 375\n",
-    "# Print \"Place in a <<your integer goes here>> F oven for 8-10 minutes and remove just before they start to turn brown.\"\n",
+    "# Create an integer for the oven temperature\n",
+    "temperature = 375\n",
+    "print(f\"Place in a {temperature}°F oven for 8-10 minutes and remove just before they start to turn brown.\")\n",
     "\n",
-    "# << CODE >>\n",
+    "# Create an integer for the cooling time\n",
+    "cool_down = 2\n",
+    "print(f\"Let them sit on the baking pan for {cool_down} minutes before removing to the cooling rack.\")\n",
     "\n",
-    "# Create an int called \"cool down\" using pascal case and set it to 2\n",
-    "# Print \"Let them sit on the baking pan for <<your integer goes here>> minutes before removing to cooling rack.\"\n",
+    "# Create strings for the final message\n",
+    "enjoy_string = \"Enjoy\"\n",
+    "your_string = \"your\"\n",
+    "chocolate_string = \"CHOCOLATE\"\n",
+    "chip_string = \"CHIP\"\n",
+    "cookies_string = \"COOKIES!!!\"\n",
     "\n",
-    "# << CODE >>\n",
-    "\n",
-    "# Create 5 string (use whatever casing you feel)\n",
-    "# First string should be \"Enjoy\"\n",
-    "# Second string should be \"your\"\n",
-    "# Third string should be \"CHOCOLATE\"\n",
-    "# Fourth string should be \"CHIP\"\n",
-    "# Fifth string should be \"COOKIES!!!\"\n",
-    "# Using ONE print statement, print ALL of these variables (with a space between each)\n",
-    "\n",
-    "# << CODE >>\n",
-    "\n",
-    "# JSON CHALLENGE\n",
-    "# can your do the whole project by using a JSON list?\n",
-    "# can you convert it to a python dictionary and do all these steps?\n",
-    "\n",
-    "# Yes this is a real cookie recipe. You can find it below if you wanna make them! :)\n",
-    "# https://joyfoodsunshine.com/the-most-amazing-chocolate-chip-cookies/\n"
+    "# Print all the strings with a space between each\n",
+    "print(enjoy_string, your_string, chocolate_string, chip_string, cookies_string)\n"
    ]
   }
  ],
