--- a/_notebooks/2023-10-2-STUDENTTEACHALGOR copy.ipynb
+++ b/_notebooks/2023-10-2-STUDENTTEACHALGOR copy.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "double of 1is 2\n"
+      "double of 5 is 10\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PseudoCode here: "
+    "PseudoCode here: \n",
+    "move forward\n",
+    "move forward\n",
+    "move forward\n",
+    "turn left \n",
+    "move forward\n",
+    "move forward\n",
+    "turn right\n",
+    "move forward\n",
+    "move forward \n",
+    "move forward"
    ]
   },
   {
@@ -426,11 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "665\n"
+     ]
+    }
+   ],
    "source": [
     "##YOUR WORK HERE \n",
+    "variable1 = input(\"What is your first number?\")\n",
+    "variable2 = input(\"What is yout second number?\")\n",
+    "print(variable2 + variable1)\n",
     "##Hint: Use if else statements, defining functions, input"
    ]
   },
@@ -543,6 +564,83 @@
     "### Criteria for above 90%: <br>\n",
     "1. Add a unique program, function, or feature not specified by criterias\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total characters (including spaces and numbers): 7\n",
+      "Total vowels: 3\n",
+      "Average word length: 3.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_characters(input_string):\n",
+    "    # Initialize counters\n",
+    "    total_chars = 0\n",
+    "    total_letters = 0\n",
+    "    total_numbers = 0\n",
+    "    total_spaces = 0\n",
+    "    total_vowels = 0\n",
+    "    word_count = 0\n",
+    "\n",
+    "    # Create a list of vowels\n",
+    "    vowels = \"aeiouAEIOU\"\n",
+    "\n",
+    "    # Split the input string into words\n",
+    "    words = input_string.split()\n",
+    "\n",
+    "    # Iterate through characters in the input string\n",
+    "    for char in input_string:\n",
+    "        total_chars += 1\n",
+    "\n",
+    "        # Check if the character is a letter\n",
+    "        if char.isalpha():\n",
+    "            total_letters += 1\n",
+    "\n",
+    "        # Check if the character is a digit\n",
+    "        elif char.isdigit():\n",
+    "            total_numbers += 1\n",
+    "\n",
+    "        # Check if the character is a space\n",
+    "        elif char.isspace():\n",
+    "            total_spaces += 1\n",
+    "\n",
+    "        # Check if the character is a vowel\n",
+    "        if char in vowels:\n",
+    "            total_vowels += 1\n",
+    "\n",
+    "    # Calculate the average word length\n",
+    "    if words:\n",
+    "        word_count = len(words)\n",
+    "        total_word_length = sum(len(word) for word in words)\n",
+    "        average_word_length = total_word_length / word_count\n",
+    "    else:\n",
+    "        average_word_length = 0\n",
+    "\n",
+    "    return total_chars, total_vowels, average_word_length\n",
+    "\n",
+    "def main():\n",
+    "    # Accept input from the user\n",
+    "    user_input = input(\"Enter a string: \")\n",
+    "\n",
+    "    # Count characters, vowels, and calculate average word length\n",
+    "    total_chars, total_vowels, average_word_length = count_characters(user_input)\n",
+    "\n",
+    "    # Display the results\n",
+    "    print(f\"Total characters (including spaces and numbers): {total_chars}\")\n",
+    "    print(f\"Total vowels: {total_vowels}\")\n",
+    "    print(f\"Average word length: {average_word_length:.2f}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
@@ -561,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
