--- a/_notebooks/2023-10-03-HomeworkProblems (1).ipynb
+++ b/_notebooks/2023-10-03-HomeworkProblems (1).ipynb
@@ -8,7 +8,7 @@
     "toc: true\n",
     "comments: false\n",
     "layout: post\n",
-    "title: saathvik hw \n",
+    "title: group 1 \n",
     "type: hacks\n",
     "courses: { compsci: {week: 6} }\n",
     "---\n",
