--- a/_notebooks/2023-10-03-HomeworkProblems (1) (1).ipynb
+++ b/_notebooks/2023-10-03-HomeworkProblems (1) (1).ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Saathvik HW\n",
+    "title: Group 1\n",
     "description: An introduction to key topics in Web Programming\n",
     "courses: { compsci: { week: 6 } }\n",
     "type: hacks\n",
