--- a/_notebooks/2023-10-09-boolean-if.ipynb
+++ b/_notebooks/2023-10-09-boolean-if.ipynb
@@ -167,11 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bring an umbrella!\n"
+     ]
+    }
+   ],
    "source": [
-    "## YOUR CODE HERE"
+    "\n",
+    "is_raining = True\n",
+    "\n",
+    "if is_raining:\n",
+    "    print(\"Bring an umbrella!\")\n",
+    "else:\n",
+    "    print(\"The weather is clear.\")\n"
    ]
   },
   {
@@ -223,11 +237,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 31\n",
+      "b = 67\n",
+      "a is less than b.\n"
+     ]
+    }
+   ],
    "source": [
-    "## YOUR CODE HERE"
+    "import random\n",
+    "\n",
+    "def randomize_numbers():\n",
+    "    a = random.randint(0, 100)\n",
+    "    b = random.randint(0, 100)\n",
+    "    return a, b\n",
+    "\n",
+    "\n",
+    "a, b = randomize_numbers()\n",
+    "\n",
+    "\n",
+    "print(f\"a = {a}\")\n",
+    "print(f\"b = {b}\")\n",
+    "\n",
+    "if a > b:\n",
+    "    print(\"a is more than b.\")\n",
+    "elif a == b:\n",
+    "    print(\"a is the same as b.\")\n",
+    "else:\n",
+    "    print(\"a is less than b.\")\n"
    ]
   },
   {
@@ -244,68 +287,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your past score: 1\n",
+      "Hello, Dante running /bin/python\n",
+      "You will be asked 5 questions.\n"
+     ]
+    }
+   ],
    "source": [
-    "#HOMEWORK\n",
+    "import sys\n",
     "\n",
-    "\n",
-    "# The quiz contains questions related to Boolean values, Boolean expressions,\n",
-    "# conditional statements, relational operators, and logical operators.\n",
-    "\n",
-    "# Import necessary modules\n",
-    "import getpass  # Module to get the user's name\n",
-    "import sys  # Module to access system-related information\n",
-    "\n",
-    "# Function to ask a question and get a response\n",
-    "def question_with_response(prompt):\n",
-    "    # Print the question\n",
+    "def ask_question(prompt, correct_answer):\n",
     "    print(\"Question: \" + prompt)\n",
-    "    # Get user input as the response\n",
-    "    msg = input()\n",
-    "    return msg\n",
+    "    user_answer = input(\"Your answer: \").strip().lower()\n",
+    "    \n",
+    "    if user_answer == correct_answer:\n",
+    "        print(\"Correct!\")\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print(\"Incorrect. The correct answer is: \" + correct_answer)\n",
+    "        return 0\n",
     "\n",
-    "# Define the number of questions and initialize the correct answers counter\n",
     "questions = 5\n",
     "correct = 0\n",
     "\n",
-    "# Personalized greeting message\n",
-    "# Collect the student's name\n",
     "user_name = input(\"Enter your name: \")\n",
-    "print('Hello, ' + user_name + \" running \" + sys.executable)\n",
-    "print(\"You will be asked \" + str(questions) + \" questions.\")\n",
-    "answer = input(\"Are you ready to take a test?\")\n",
     "\n",
-    "# Question 1: Boolean Basics \n",
-    "# Ask a question about Boolean values and check the response\n",
-    "# Provide feedback based on the correctness of the response\n",
+    "try:\n",
+    "    with open(f\"{user_name}_quiz_score.txt\", \"r\") as score_file:\n",
+    "        past_score = int(score_file.read())\n",
+    "    print(f\"Your past score: {past_score}\")\n",
+    "except FileNotFoundError:\n",
+    "    past_score = 0\n",
+    "    print(\"No past score found.\")\n",
     "\n",
-    "# Question 2: Boolean Expressions\n",
-    "# Ask a question about Boolean expressions and their importance in programming\n",
-    "# Provide feedback based on the correctness of the response\n",
+    "print(f'Hello, {user_name} running {sys.executable}')\n",
+    "print(f'You will be asked {questions} questions.')\n",
+    "answer = input(\"Are you ready to take a test? (yes/no) \")\n",
     "\n",
-    "# Question 3: Conditional Statements\n",
-    "# Ask a question about the purpose of conditional (if-else) statements in programming\n",
-    "# Provide feedback based on the correctness of the response\n",
+    "if answer.lower() != \"yes\":\n",
+    "    print(\"Okay, maybe next time. Goodbye!\")\n",
+    "    sys.exit()\n",
     "\n",
-    "# Question 4: Relational Operators\n",
-    "# Ask a question about common relational operators in programming and provide examples\n",
-    "# Provide feedback based on the correctness of the response\n",
+    "correct += ask_question(\"Question 1: What are the two possible values of a Boolean variable?\", \"true or false\")\n",
+    "correct += ask_question(\"Question 2: Why are Boolean expressions important in programming?\", \"they allow for decision-making and control flow\")\n",
+    "correct += ask_question(\"Question 3: What is the purpose of conditional (if-else) statements in programming?\", \"to make decisions and execute different code based on conditions\")\n",
+    "correct += ask_question(\"Question 4: Give an example of a relational operator and explain its purpose.\", \"example: > (greater than), purpose: it compares if one value is greater than another\")\n",
+    "correct += ask_question(\"Question 5: What are logical operators in programming? Provide an example.\", \"logical operators are used to combine multiple Boolean values. Example: 'and' combines two conditions, and both must be true for the whole expression to be true\")\n",
     "\n",
-    "# Question 5: Logical Operators\n",
-    "# Ask a question about the use of logical operators in programming and provide examples\n",
-    "# Provide feedback based on the correctness of the response\n",
+    "percentage = (correct / questions) * 100\n",
+    "print(f\"{user_name}, you scored {correct}/{questions} ({percentage:.2f}%).\")\n",
     "\n",
-    "# Display the final score\n",
-    "# Calculate the percentage of correct answers and provide feedback\n",
-    "print(user_name + \", you scored \" + str(correct) + \"/\" + str(questions))"
+    "if past_score < correct:\n",
+    "    print(\"Congratulations! You passed the quiz and achieved a new high score!\")\n",
+    "    with open(f\"{user_name}_quiz_score.txt\", \"w\") as score_file:\n",
+    "        score_file.write(str(correct))\n",
+    "elif past_score == correct:\n",
+    "    print(\"You matched your previous high score. Keep it up!\")\n",
+    "else:\n",
+    "    print(\"You need to study more. Try again later.\")\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
