--- a/_notebooks/2023-10-09-boolean-if.ipynb
+++ b/_notebooks/2023-10-09-boolean-if.ipynb
@@ -296,7 +296,19 @@
      "text": [
       "Your past score: 1\n",
       "Hello, Dante running /bin/python\n",
-      "You will be asked 5 questions.\n"
+      "You will be asked 5 questions.\n",
+      "Question: Question 1: What are the two possible values of a Boolean variable?\n",
+      "Correct!\n",
+      "Question: Question 2: Why are Boolean expressions important in programming?\n",
+      "Incorrect. The correct answer is: they allow for decision-making and control flow\n",
+      "Question: Question 3: What is the purpose of conditional (if-else) statements in programming?\n",
+      "Incorrect. The correct answer is: to make decisions and execute different code based on conditions\n",
+      "Question: Question 4: Give an example of a relational operator and explain its purpose.\n",
+      "Incorrect. The correct answer is: example: > (greater than), purpose: it compares if one value is greater than another\n",
+      "Question: Question 5: What are logical operators in programming? Provide an example.\n",
+      "Incorrect. The correct answer is: logical operators are used to combine multiple Boolean values. Example: 'and' combines two conditions, and both must be true for the whole expression to be true\n",
+      "Dante, you scored 1/5 (20.00%).\n",
+      "You matched your previous high score. Keep it up!\n"
      ]
     }
    ],
