--- a/_notebooks/2023-10-09-IterationLesson.ipynb
+++ b/_notebooks/2023-10-09-IterationLesson.ipynb
@@ -58,14 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 5:\n",
     "    print(i)\n",
-    "    i += 1"
+    "    i += 2\n"
    ]
   },
   {
@@ -79,13 +89,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "i=0\n",
-    "# your code here\n",
-    "print (i)\n"
+    "while i < 9:\n",
+    "    print (i + 2)\n",
+    "    i +=2\n"
    ]
   },
   {
@@ -108,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "i = 1\n",
     "while i < 5:\n",
@@ -131,9 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 5:\n",
@@ -154,13 +197,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
    "source": [
-    "i = 0\n",
-    "# your code here    \n",
-    "    print(i)"
+    "i = 0 \n",
+    "while i < 20:\n",
+    "    i += 1 \n",
+    "    if i % 2 == 0:\n",
+    "        continue\n",
+    "    print(i)\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -408,11 +473,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "97\n",
+      "98\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "i = 1 \n",
+    "for i in range(1,101):\n",
+    "    if (i % 4 == 0):\n",
+    "        continue\n",
+    "    print(i)\n"
    ]
   },
   {
@@ -437,13 +588,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 9, 28, 53, 54, 55, 81, 86]\n"
+     ]
+    }
+   ],
    "source": [
-    "#start here\n",
-    "def shortestToLongestSorter(nums):\n",
-    "    pass"
+    "def ascending_sort(nums):\n",
+    "    n = len(nums)\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        swapped = False\n",
+    "        \n",
+    "        for j in range(0, n-i-1):\n",
+    "            if nums[j] > nums[j+1]:\n",
+    "                nums[j], nums[j+1] = nums[j+1], nums[j]\n",
+    "                swapped = True\n",
+    "        \n",
+    "        if not swapped:\n",
+    "            break\n",
+    "    \n",
+    "    return nums\n",
+    "\n",
+    "\n",
+    "original_list = [5, 54, 86, 9, 28, 55, 53, 81]\n",
+    "sorted_list = ascending_sort(original_list)\n",
+    "print(sorted_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bat', 'Cars', 8, 11, 'Tyranasourous rex', 77]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mix_org(strings):\n",
+    "    def get_length(string):\n",
+    "        if isinstance(string, str):\n",
+    "            return len(string)\n",
+    "        elif isinstance(string, int):\n",
+    "            return string\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    sorted_strings = sorted(strings, key=get_length)\n",
+    "    return sorted_strings\n",
+    "\n",
+    "input_list = [\"bat\", 8, 11, \"Cars\", 77, \"Tyranasourous rex\"]\n",
+    "sorted_list = mix_org(input_list)\n",
+    "print(sorted_list)"
    ]
   }
  ],
@@ -463,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
