--- a/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
+++ b/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
@@ -42,9 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the temperature outside °F?\n",
+      "It is too hot outside!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"What is the temperature outside °F?\")\n",
     "temp = int(input())\n",
@@ -58,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the temperature outside °F?\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"What is the temperature outside °F?\")\n",
     "temp = int(input())\n",
@@ -165,9 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "def find_max(numbers):\n",
     "    max_value = numbers[0]\n",
@@ -195,11 +220,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# Place your code here..."
+    "# Place your code here...\n",
+    "def find_min(numbers):\n",
+    "    min_value = numbers[0]\n",
+    "    for number in numbers:\n",
+    "        if number < min_value:\n",
+    "            min_value = number\n",
+    "    return min_value\n",
+    "#List of numbers\n",
+    "numbers = [23, 45, 67, 89, 12, 34, 56, 78]\n",
+    "\n",
+    "min_value = find_min(numbers)\n",
+    "print(min_value)\n"
    ]
   },
   {
@@ -213,15 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (335410965.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    Calling the function\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
      ]
     }
    ],
@@ -294,11 +337,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of odd numbers from 1 to 3 is 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Place your code here..."
+    "def sum_of_odds(n):\n",
+    "    total = 0\n",
+    "    for i in range(1, n + 1, 2): #Note the 2 and the very end initializes a step size of 2 for the function\n",
+    "        total += i\n",
+    "    return total\n",
+    "\n",
+    "n = int(input(\"Enter a positive integer: \"))\n",
+    "result = sum_of_odds(n)\n",
+    "print(f\"The sum of odd numbers from 1 to {n} is {result}\")"
    ]
   },
   {
@@ -312,9 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of odd numbers from 1 to 6 is: 9\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_of_odd_numbers(n):\n",
     "    total = 0\n",
@@ -414,11 +481,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day 1: Temperature: 7180 F\n",
+      "Day 2: Temperature: 5150 F\n",
+      "Day 3: Temperature: 419 F\n",
+      "Day 4: Temperature: 4592 F\n",
+      "Day 5: Temperature: 4547 F\n"
+     ]
+    }
+   ],
    "source": [
-    "# Place your code here..."
+    "import random\n",
+    "\n",
+    "def weather_temp():\n",
+    "    for day in range(1, 6):\n",
+    "        temperature = random.randint(60,90)\n",
+    "        print( f'Day {day}: Temperature: {temperature} F')\n",
+    "\n",
+    "weather_temp()"
    ]
   },
   {
@@ -467,11 +553,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collatz Conjecture Sequence: [7, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Place your code here..."
+    "def collatz_conjecture(n):\n",
+    "    collatz_list = [n]  \n",
+    "\n",
+    "    while n != 1:\n",
+    "        if n % 2 == 0:\n",
+    "            n = n // 2  \n",
+    "        else:\n",
+    "            n = 3 * n + 1 \n",
+    "\n",
+    "        collatz_list.append(n)  \n",
+    "\n",
+    "    return collatz_list\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    starting_number = int(input(\"Enter a starting number: \"))\n",
+    "except ValueError:\n",
+    "    print(\"Please enter a valid integer.\")\n",
+    "    exit()\n",
+    "\n",
+    "result = collatz_conjecture(starting_number)\n",
+    "print(\"Collatz Conjecture Sequence:\", result)\n"
    ]
   },
   {
@@ -489,11 +604,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Place your code here..."
+    "def generate_fibonacci_sequence(n):\n",
+    "    if n <= 0:\n",
+    "        return []\n",
+    "\n",
+    "    fibonacci_sequence = [1]  \n",
+    "\n",
+    "    if n > 1:\n",
+    "        fibonacci_sequence.append(1) \n",
+    "\n",
+    "    while len(fibonacci_sequence) < n:\n",
+    "        next_term = fibonacci_sequence[-1] + fibonacci_sequence[-2]\n",
+    "        fibonacci_sequence.append(next_term)\n",
+    "\n",
+    "    return fibonacci_sequence\n",
+    "\n",
+    "try:\n",
+    "    n = int(input(\"Enter the number of Fibonacci terms to generate: \"))\n",
+    "except ValueError:\n",
+    "    print(\"Please enter a valid integer.\")\n",
+    "    exit()\n",
+    "\n",
+    "if n <= 0:\n",
+    "    print(\"The number of terms should be a positive integer.\")\n",
+    "else:\n",
+    "    result = generate_fibonacci_sequence(n)\n",
+    "    print(f\"Fibonacci Sequence of {n} terms:\", result)\n"
    ]
   },
   {
@@ -534,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
