--- a/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
+++ b/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
@@ -604,9 +604,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Sequence of 6 terms: [1, 1, 2, 3, 5, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_fibonacci_sequence(n):\n",
     "    if n <= 0:\n",
@@ -650,11 +658,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: [3, 7, 24, 33, 43, 43, 46, 67, 75, 93]\n",
+      "Mean: 43.4\n",
+      "Median: 43.0\n",
+      "Mode: [43]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Place your code here..."
+    "import random\n",
+    "\n",
+    "def calculate_mean(data):\n",
+    "    # Calculate the mean (average) of the data\n",
+    "    if len(data) == 0:\n",
+    "        return None\n",
+    "    return sum(data) / len(data)\n",
+    "\n",
+    "def calculate_median(data):\n",
+    "    # Calculate the median of the data\n",
+    "    data.sort()\n",
+    "    n = len(data)\n",
+    "    if n % 2 == 0:\n",
+    "        middle1 = data[n // 2]\n",
+    "        middle2 = data[n // 2 - 1]\n",
+    "        median = (middle1 + middle2) / 2\n",
+    "    else:\n",
+    "        median = data[n // 2]\n",
+    "    return median\n",
+    "\n",
+    "def calculate_mode(data):\n",
+    "    # Calculate the mode (most frequent value) of the data\n",
+    "    if len(data) == 0:\n",
+    "        return None\n",
+    "    frequency = {}\n",
+    "    for item in data:\n",
+    "        frequency[item] = frequency.get(item, 0) + 1\n",
+    "    mode = [k for k, v in frequency.items() if v == max(frequency.values())]\n",
+    "    return mode\n",
+    "\n",
+    "# Generate a set of ten random numbers between 1 and 100\n",
+    "data = [random.randint(1, 100) for _ in range(10)]\n",
+    "\n",
+    "# Calculate and print the mean, median, and mode\n",
+    "mean = calculate_mean(data)\n",
+    "median = calculate_median(data)\n",
+    "mode = calculate_mode(data)\n",
+    "\n",
+    "print(f\"Data: {data}\")\n",
+    "print(f\"Mean: {mean}\")\n",
+    "print(f\"Median: {median}\")\n",
+    "print(f\"Mode: {mode}\")\n"
    ]
   }
  ],
