--- a/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
+++ b/_notebooks/2023-10-13-Lesson-Devoloping-Algortithims.ipynb
@@ -595,7 +595,7 @@
    "source": [
     "2. Create an algorithm that generates terms to the Fibonacci Sequence which outputs a specific number of terms defined in your code. The sequence starts off like 1, 1, 2, 3, 5, … each following term being the sum of the previous two.\n",
     "\n",
-    "Ideas for above 90%:\n",
+    "Ideas for above 90%\n",
     "\n",
     "- Add user input\n",
     "- Display error message when an invalid input is specified\n",
