--- a/_notebooks/2023-10-12-lists-and-search.ipynb
+++ b/_notebooks/2023-10-12-lists-and-search.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "id": "5e8e0948",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "id": "1c6c3810",
    "metadata": {},
    "outputs": [
@@ -97,14 +97,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[' yes', ' yes', ' yes', 'hi', 'no', ' maybe', ' yes']\n"
+      "[' hi', 'hi', 'no', ' maybe', ' hi']\n"
      ]
     }
    ],
    "source": [
     "# ANSWER: \n",
     "# Inserting items to a specific list, remember python is 0 based on the items!!\n",
-    "lst.insert(5, \" maybe\")\n",
+    "lst.insert(0, \" hi\")\n",
     "print(lst)"
    ]
   },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "id": "d29c6491",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hi', 'no', ' maybe', ' yes']\n",
+      "['hi', 'no', ' maybe', ' hi']\n",
       "hi\n"
      ]
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "id": "4e9f4651",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "id": "1b892fe0",
    "metadata": {},
    "outputs": [
@@ -345,12 +345,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d6617031",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Element: eggs\n",
+      "Index of the Random Element: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "import random\n",
+    "def linear_search(target, unsorted_list):\n",
+    "    for i in range(len(unsorted_list)):\n",
+    "        if unsorted_list[i] == target:\n",
+    "            return i\n",
+    "    return -1\n",
+    "list = [\"eggs\", \"milk\", \"butter\", \"cake\"]\n",
+    "random_element = random.choice(list)\n",
+    "index = linear_search(random_element, list)\n",
+    "print(\"Random Element:\", random_element)\n",
+    "if index != -1:\n",
+    "    print(\"Index of the Random Element:\", index)\n",
+    "else:\n",
+    "    print(\"Random Element not found in the list.\")\n",
+    "\n"
    ]
   },
   {
@@ -381,12 +404,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "34575e73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Binary Search Guessing Game!\n",
+      "Try to guess the number between 1 and 100.\n",
+      "The target number is higher.\n",
+      "The target number is lower.\n",
+      "The target number is lower.\n",
+      "The target number is lower.\n",
+      "The target number is lower.\n",
+      "The target number is lower.\n",
+      "Congratulations! You guessed the number 52 in 7 tries.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in here"
+    "import random\n",
+    "\n",
+    "def binary_search(target, sorted_list):\n",
+    "    low = 0\n",
+    "    high = len(sorted_list) - 1\n",
+    "    tries = 0\n",
+    "\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        guess = sorted_list[mid]\n",
+    "        tries += 1\n",
+    "\n",
+    "        if guess == target:\n",
+    "            return tries\n",
+    "        elif guess < target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return tries\n",
+    "\n",
+    "# Generate a sorted list of 100 elements\n",
+    "sorted_list = [x for x in range(1, 101)]\n",
+    "\n",
+    "# Generate a random target number\n",
+    "target = random.randint(1, 100)\n",
+    "\n",
+    "print(\"Welcome to the Binary Search Guessing Game!\")\n",
+    "print(\"Try to guess the number between 1 and 100.\")\n",
+    "\n",
+    "user_guess = None\n",
+    "tries = 0\n",
+    "\n",
+    "while user_guess != target:\n",
+    "    user_guess = int(input(\"Enter your guess: \"))\n",
+    "    tries += 1\n",
+    "\n",
+    "    if user_guess < target:\n",
+    "        print(\"The target number is higher.\")\n",
+    "    elif user_guess > target:\n",
+    "        print(\"The target number is lower.\")\n",
+    "\n",
+    "print(f\"Congratulations! You guessed the number {target} in {tries} tries.\")\n"
    ]
   },
   {
@@ -399,12 +480,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8ba0fe5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Binary Search Guessing Game!\n",
+      "Try to guess the number between 1 and 100: 100\n",
+      "Congratulations! You found the number 100 at position 99.\n",
+      "It took you 7 tries.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in here"
+    "import random\n",
+    "\n",
+    "def binary_search(target, sorted_list):\n",
+    "    low = 0\n",
+    "    high = len(sorted_list) - 1\n",
+    "    attempts = 0\n",
+    "\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        guess = sorted_list[mid]\n",
+    "        attempts += 1\n",
+    "\n",
+    "        if guess == target:\n",
+    "            return mid, attempts\n",
+    "        elif guess < target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return None, attempts\n",
+    "\n",
+    "# Generate a sorted list of 100 elements\n",
+    "sorted_list = [i for i in range(1, 101)]\n",
+    "\n",
+    "# Randomly select a target number\n",
+    "target = random.randint(1, 100)\n",
+    "\n",
+    "print(\"Welcome to the Binary Search Guessing Game!\")\n",
+    "print(f\"Try to guess the number between 1 and 100: {target}\")\n",
+    "\n",
+    "position, tries = binary_search(target, sorted_list)\n",
+    "\n",
+    "if position is not None:\n",
+    "    print(f\"Congratulations! You found the number {target} at position {position}.\")\n",
+    "    print(f\"It took you {tries} tries.\")\n",
+    "else:\n",
+    "    print(\"The number was not found in the list.\")\n"
    ]
   }
  ],
