Final review tings

--- a/_notebooks/2023-11-04-Team-Teach-Notes.ipynb
+++ b/_notebooks/2023-11-04-Team-Teach-Notes.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     "# Converting Sring to and from JSON\n",
     "\n",
     "import json \n",
-    "list = [\"Bill\", \"Bob\", \"Ben\", \"Bailey\"] \n",
+    "list = [\"Dante\", \"Jake\", \"Ethan\", \"Jorfan\"] \n",
     "json_obj = json.dumps(list) \n",
     "print(json_obj)"
    ]
