--- a/_notebooks/2023-11-04-Team-Teach-Notes.ipynb
+++ b/_notebooks/2023-11-04-Team-Teach-Notes.ipynb
@@ -8,10 +8,9 @@
     "toc: true\n",
     "comments: false\n",
     "layout: post\n",
-    "title: Complete Team Teach Notes and Thoughts\n",
-    "description:  Teams Teaches\n",
+    "title: Team teach review \n",
+    "type: tangibles\n",
     "courses: { compsci: {week: 8} }\n",
-    "type: hacks\n",
     "---"
    ]
   },
@@ -31,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"Bill\", \"Bob\", \"Ben\", \"Bailey\"]\n"
+      "[\"Dante\", \"Jake\", \"Ethan\", \"Jorfan\"]\n"
      ]
     }
    ],
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,29 +87,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32.5\n"
+      "12.0\n"
      ]
     }
    ],
    "source": [
     "# Math \n",
-    "num1 = 40\n",
-    "num2 = num1 / 2\n",
-    "num3 = 5 * num2 + 3\n",
-    "result = num2 % 3 * num1 + 4 - num3 / 2\n",
+    "num1 = 50\n",
+    "num2 = num1 / 4\n",
+    "num3 = 2 * num2 + 5\n",
+    "result = num2 % 4 * num1 + 2 - num3 / 2\n",
     "print (result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +130,8 @@
     "    return clean_str == clean_str[::-1]\n",
     "\n",
     "\n",
-    "print(palindrome(\"taco cat\")) # True\n",
-    "print(palindrome(\"hi\")) # False"
+    "print(palindrome(\"racecar\")) # True\n",
+    "print(palindrome(\"burger\")) # False"
    ]
   },
   {
@@ -185,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number is odd\n"
+      "Number is even\n"
      ]
     }
    ],
@@ -223,29 +222,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple\n",
-      "banana\n",
-      "cherry\n"
+      "beet\n",
+      "pepper\n",
+      "potatoe\n"
      ]
     }
    ],
    "source": [
     "#For Loop\n",
-    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for fruit in fruits:\n",
-    "    print(fruit)"
+    "veg = [\"beet\", \"pepper\", \"potatoe\"]\n",
+    "for veg in veg:\n",
+    "    print(veg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,9 +255,9 @@
       "2\n",
       "3\n",
       "4\n",
-      "name : Ronit\n",
+      "name : Dante\n",
       "age : 15\n",
-      "city : San Diego\n"
+      "city : Santa Anna\n"
      ]
     }
    ],
@@ -268,7 +267,7 @@
     "for num in numbers:\n",
     "    print(num)\n",
     "    \n",
-    "person = {\"name\": \"Ronit\", \"age\": 15, \"city\": \"San Diego\"}\n",
+    "person = {\"name\": \"Dante\", \"age\": 15, \"city\": \"Santa Anna\"}\n",
     "for key, value in person.items():\n",
     "    print(key, \":\", value)\n"
    ]
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Things You Want: ['fornite', 'cats']\n"
+      "Things You Want: ['snacks', 'cheese', 'plane']\n"
      ]
     }
    ],
@@ -401,21 +400,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image saved successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "#importing and using a library\n",
     "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO\n",
     "\n",
-    "# Example usage:\n",
-    "image = Image.open('/home/lincolnc2008/vscode/student3/images/frog-game.jpg')#This is the path of the image\n",
-    "image.show()"
+    "# The URL of the image\n",
+    "url = 'https://upload.wikimedia.org/wikipedia/commons/d/d7/Cristiano_Ronaldo_playing_for_Al_Nassr_FC_against_Persepolis%2C_September_2023_%28cropped%29.jpg'\n",
+    "\n",
+    "# Send a GET request to the URL\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Check if the request was successful\n",
+    "if response.status_code == 200:\n",
+    "    # Open the image from the binary content in memory\n",
+    "    image = Image.open(BytesIO(response.content))\n",
+    "    \n",
+    "    # Save the image to a file\n",
+    "    image.save('ronaldo.jpg')\n",
+    "    print(\"Image saved successfully.\")\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve image. Status code: {response.status_code}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
