--- a/_notebooks/2023-11-3-College Board.ipynb
+++ b/_notebooks/2023-11-3-College Board.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: false\n",
+    "layout: post\n",
+    "title: college board \n",
+    "type: tangible\n",
+    "courses: { compsci: {week: 6} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## questions I struggled with\n",
     "Q1-5-Medium difficulty felt confident for all\n",
     "Q6 I had never heard of the Ietf so i looked up basic information\n",
