--- a/_notebooks/2023-11-01-Final Individual Review.ipynb
+++ b/_notebooks/2023-11-01-Final Individual Review.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My individual code "
+    "## My individual code: Frontend"
    ]
   },
   {
@@ -125,6 +125,87 @@
     "    </style>\n",
     "</body>\n",
     "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of the code\n",
+    "The code consists of a short survey where the user must answer 3 short questions in order to personalize the movies outputted. The user's responses are stored in variables. Then, the variables are used when the request is being sent to the movie API being used. The movies that follow those filters are then outputted where the user is allowed to favorite them . "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## My individual code: Backend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from flask_cors import CORS\n",
+    "from flask import Flask, request, jsonify\n",
+    "import sqlite3\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "CORS(app)  # Enable CORS for all routes\n",
+    "\n",
+    "DATABASE = 'movies.db'\n",
+    "\n",
+    "@app.route('/favorites', methods=['POST'])\n",
+    "def add_favorite():\n",
+    "    movie_data = request.get_json()\n",
+    "    title = movie_data.get('title')\n",
+    "    release_date = movie_data.get('release_date')\n",
+    "    rating = movie_data.get('rating')\n",
+    "\n",
+    "    with sqlite3.connect(DATABASE) as conn:\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute(\"INSERT INTO favorites (title, release_date, rating) VALUES (?, ?, ?)\", (title, release_date, rating))\n",
+    "        conn.commit()\n",
+    "\n",
+    "    return jsonify({\"message\": \"Movie added to favorites successfully!\"})\n",
+    "\n",
+    "@app.route('/favorites', methods=['GET'])\n",
+    "def get_favorites():\n",
+    "    with sqlite3.connect(DATABASE) as conn:\n",
+    "        cursor = conn.cursor()\n",
+    "        cursor.execute(\"SELECT title, release_date, rating FROM favorites\")\n",
+    "        movies = cursor.fetchall()\n",
+    "\n",
+    "    return jsonify(movies)\n",
+    "\n",
+    "@app.route('/')\n",
+    "def home():\n",
+    "    return \"Welcome to the Movie API\"\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary of the code\n",
+    "In the frontend, the user is allowed to favorite the movies they want to come back to. The favorited movies are communicated to the backend where they are stored in a SQ lite database. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reflection of Passion Project\n",
+    "Overall, this passion project taught me many important aspects relating to coding. First, the project allowed me to work on structuring group work and communicating with teammates. Communication was in my opinion the most important part of the the project since it allowed us to meet our goals and maintain a fun, but productive work enviornment. Another thing it taught me was overall how to effectively code so the code would proparly function and be easily readable. "
    ]
   }
  ],
