--- a/_notebooks/2023-11-5-PseudoCode.ipynb
+++ b/_notebooks/2023-11-5-PseudoCode.ipynb
@@ -5,13 +5,11 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
-    "comments: true\n",
     "layout: post\n",
-    "title: Pseudo Code Reflection\n",
-    "description:  This is a reflection of my understanding of Pseudo Code\n",
-    "courses: { compsci: {week: 8} }\n",
-    "type: tangibles\n",
+    "title: Pseudo Code Notes\n",
+    "description: Connecting Pseudo code to python\n",
+    "courses: { compsci: { week: 8 } }\n",
+    "type: hacks\n",
     "---"
    ]
   },
