--- a/_posts/2023-11-06-Wrong.md
+++ b/_posts/2023-11-06-Wrong.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: Pseudo Code Notes
+description: Connecting Pseudo code to python
+courses: { compsci: { week: 8 } }
+type: hacks
+---
+
 ## Questions I got wrong 
 Question 3: Which of the following would be the best use of citizen science?
 I selected: A, An experiment that requires all participants to be working in the same laboratory
